<resources>
    <string name="app_name">HelloWorld</string>
    <string name="calculate">Calculate</string>
    <string name="_0">=0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="bottomText">By continuing, you accept the Term of Use and Privacy Policy</string>
    <string name="skip">Skip</string>
    <string name="getStart">GET STARTED</string>
    <string name="welcomeFirst">Welcome to Clipzy</string>
    <string name="welcomeSecond">Clip anything from over</string>
    <string name="welcomeThird">100,000 hot topics</string>
    <string name="button">BUTTON</string>


</resources>
