<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="20">

        <EditText
            android:id="@+id/editTextFirst"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:inputType="number"
            android:background="@drawable/ninepatch_lab"/>

        <EditText
            android:id="@+id/editTextSecond"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:inputType="number"
            android:background="@drawable/ninepatch_lab"/>

        <TextView
            android:id="@+id/tvAnswer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/_0" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I agree"/>

    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/rbAdd"
        >
        <RadioButton
            android:id="@+id/rbAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            />
        <RadioButton
            android:id="@+id/rbMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/minus"/>
        <RadioButton
            android:id="@+id/rbMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/multiply"/>
        <RadioButton
            android:id="@+id/rbDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/divide"/>
    </RadioGroup>

    <ProgressBar
        style="@style/ProgressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="100"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#000000"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                >
                <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
                    android:adjustViewBounds="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher"
                    android:layout_weight="1"
                    android:scaleType="fitXY"/>
                <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageButton
                    android:adjustViewBounds="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:background="@drawable/selector_btn_default"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>




</LinearLayout>